--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input id="token" type="password" placeholder="トークンを入力" class="w-full p-2 mb-2 rounded bg-gray-700 text-white">
         <input id="groupName" type="text" placeholder="グループ名を入力 (!all ですべて)" class="w-full p-2 mb-4 rounded bg-gray-700 text-white">
         <button onclick="startLeaving()" class="w-full bg-blue-600 hover:bg-blue-500 p-2 rounded">実行</button>
+        <button onclick="goHome()" class="w-full bg-green-600 hover:bg-green-500 p-2 rounded mt-4">ホームに戻る</button>
         <div id="log" class="mt-4 p-2 bg-gray-700 rounded h-40 overflow-auto text-sm"></div>
     </div>
     <script>
@@ -52,6 +53,11 @@
             const logDiv = document.getElementById('log');
             logDiv.innerHTML += `<div>${message}</div>`;
             logDiv.scrollTop = logDiv.scrollHeight;
+        }
+
+        // ホームに戻るボタンの動作
+        function goHome() {
+            window.location.href = "https://smokeycode000.github.io/home/";
         }
     </script>
 </body>
